...
"Error" = "Error";

/* Informational alert title. */
"Info" = "Info";

/* OK button title. */
"OK" = "OK";

/* Cancel button title. */
"Cancel" = "Cancel";

/* Back button title. */
"Back" = "Back";

/* Next button title. */
"Next" = "Next";
...
